<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application string -->
    <string name="app_name">Duker</string>
    <string name="about">About</string>
    <string name="rss_title">rsstitle</string>
    <string name="title_image">Title Image</string>
    <string name="rss_time">rsstime</string>

    <!-- addFeed.java string -->
    <string name="addfeed">AddFeed</string>

    <!-- feedList.java string -->
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="feedListTitle">FeedList</string>

    <!-- menu string -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_textsize">textsize</string>
    <string name="action_textsize_small">small</string>
    <string name="action_textsize_normal">normal</string>
    <string name="action_textsize_large">large</string>

    <!-- drawer string -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- settings string -->
    <string name="account">Account</string>
    <string name="editaccount">Edit Account</string>
    <string name="accountname" translatable="false">beijing2008lm@gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="general">General</string>
    <string name="darktheme">Dark Theme</string>
    <string name="change_theme_disabled">Please Turn Off Dark Theme!</string>
    <string name="change_theme">Change Theme</string>
    <string name="pick_color">pick a color</string>
    <string name="offline">Offline Downloading</string>
    <string name="downloadonwifi">Download on WiFi</string>
    <string name="clean_des">Clean your cache</string>
    <string name="cleancache">Clean Cache</string>

    <!-- settings-about string -->
    <string name="contact_me">Contact me</string>
    <string name="email">beijing.2008.lm@163.com</string>
    <string name="storage">Storage</string>
    <string name="dir_application">Application Directory</string>
    <string name="dir_cache">Application Cache Directory</string>
    <string name="github" translatable="false">Github</string>
    <string name="github_address" translatable="false">https://github.com/lixiao123/RSSReader</string>
    <string name="public_license">PUBLIC LICENSE</string>
    <string name="version">Version</string>
    <string name="enjoy">Thank you for downloading. Enjoy!</string>

    <!-- load string -->
    <string name="copyright" translatable="false">Copyright(&#169;) 2014&#8211;2015 Foree Inc.</string>
    <string name="speak_author" translatable="false">— C.Clarke</string>
    <string name="load_speak3" translatable="false">beyond them into the impossible</string>
    <string name="load_speak2" translatable="false">possible is by going</string>
    <string name="load_tv_app_name">DUKER</string>
    <string name="load_speak1" translatable="false">The only way of finding the limits of the</string>

    <!-- drawer string -->
    <string name="account_name">昨晚多云没下雨</string>

</resources>
