<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/account">
        <ListPreference
            android:key="lp_editaccount"
            android:title="@string/editaccount"
            android:summary="@string/accountname" />
        <ListPreference
            android:key="lp_logout"
            android:title="@string/logout" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference
            android:key="lp_darktheme"
            android:title="@string/darktheme"
            android:summary="@string/dark_description" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/offline">
        <CheckBoxPreference
            android:key="lp_downloadonwifi"
            android:title="@string/downloadonwifi" />
        <CheckBoxPreference
            android:key="lp_cleancache"
            android:title="@string/cleancache"
            android:summary="@string/clean_des" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <ListPreference
            android:key="lp_contactme"
            android:title="@string/contactme"
            android:summary="@string/email" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/version">
        <ListPreference
            android:key="lp_versionnumber"
            android:title="@string/versionnumber"
            android:summary="@string/enjoy" />
    </PreferenceCategory>

</PreferenceScreen>