<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/account">
        <ListPreference
            android:enabled="false"
            android:key="lp_editaccount"
            android:layout="@layout/my_preference"
            android:summary="@string/accountname"
            android:title="@string/editaccount" />
        <com.foree.duker.ui.preference.myDialogPreference
            android:key="md_logout"
            android:layout="@layout/my_preference"
            android:title="@string/logout" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/general">
        <Preference
            android:key="pf_change_theme"
            android:layout="@layout/my_preference"
            android:title="@string/change_theme" />
        <CheckBoxPreference
            android:key="lp_darktheme"
            android:layout="@layout/my_preference"
            android:title="@string/darktheme"
            android:widgetLayout="@layout/my_preference_widget_checkbox" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/offline">
        <CheckBoxPreference
            android:key="lp_downloadonwifi"
            android:layout="@layout/my_preference"
            android:title="@string/downloadonwifi"
            android:widgetLayout="@layout/my_preference_widget_checkbox" />
        <com.foree.duker.ui.preference.myDialogPreference
            android:key="md_cleancache"
            android:layout="@layout/my_preference"
            android:title="@string/cleancache" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/about">
        <Preference
            android:layout="@layout/my_preference"
            android:title="@string/about">
            <intent android:action=".AboutActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>