<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowDescription">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_textsize_small"
        android:orderInCategory="100"
        android:title="@string/action_textsize_small"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_textsize_normal"
        android:orderInCategory="100"
        android:title="@string/action_textsize_normal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_textsize_large"
        android:orderInCategory="100"
        android:title="@string/action_textsize_large"
        app:showAsAction="ifRoom" />


</menu>
