<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/my_actionbar_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/load_tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/load_tv_app_name"
        android:textColor="@color/whitesmoke"
        android:textSize="72sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/load_tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whitesmoke"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/load_tv_app_name"
        android:layout_alignBottom="@+id/load_tv_app_name"
        android:layout_toRightOf="@+id/load_tv_app_name"
        android:layout_toEndOf="@+id/load_tv_app_name" />

    <TextView
        android:id="@+id/load_tv_speak1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/load_speak1"
        android:textColor="@color/whitesmoke"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView

        android:id="@+id/load_tv_speak2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/load_tv_speak1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/load_speak2"
        android:textColor="@color/whitesmoke"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/load_tv_speak3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/load_tv_speak2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/load_speak3"
        android:textColor="@color/whitesmoke"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/load_tv_speak_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/load_tv_speak1"
        android:layout_alignRight="@id/load_tv_speak1"
        android:layout_below="@id/load_tv_speak3"
        android:layout_marginTop="12dp"
        android:text="@string/speak_author"
        android:textColor="@color/whitesmoke"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/copyright"
        android:textColor="@color/whitesmoke" />
</RelativeLayout>